--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <script defer src="js/main.js"></script>
 </head>
 <body>
+    <div class="app">
+        <div class="columns">
+            <div class="column">
 
+            </div>
+            <div class="column">
+
+            </div>
+            <div class="column">
+
+            </div>
+        </div>
+        <div class="add_note">
+
+        </div>
+        <button>Add item</button>
+        <button>Remove item</button>
+        <button>Add in to do</button>
+    </div>
 </body>
 </html>
