--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
     <title>To Do List</title>
     <script defer src="js/vue.js"></script>
     <script defer src="js/main.js"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="app">
         <div class="columns">
             <div class="column">
+                <h2>To do, 3 max</h2>
+                    <div>
+
+                    </div>
+            </div>
+            <div class="column">
+                <h2>In progress, 5 max</h2>
 
             </div>
             <div class="column">
-
-            </div>
-            <div class="column">
+                <h2>Complete</h2>
 
             </div>
         </div>
@@ -23,8 +29,8 @@
 
         </div>
         <button>Add item</button>
-        <button>Remove item</button>
         <button>Add in to do</button>
+        <button class="remove_button">Remove item</button>
     </div>
 </body>
 </html>
