add watch in js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="app">
+    <div id="app">
         <div class="columns">
             <div class="column">
                 <h2>To do, 3 max</h2>
